--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,9 @@ build-backend = "flit.buildapi"
 module = "modutil"
 author = "Brett Cannon"
 author-email = "brett@python.org"
-home-page = "https://github.com/brettcannon/modutil"
+home-page = "https://modutil.readthedocs.io"
 description-file = "README.md"
-dev-requires = ["pytest"]
+dev-requires = ["sphinx", "sphinx_rtd_theme", "pytest"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
@@ -17,3 +17,6 @@ classifiers = [
     "Programming Language :: Python :: 3.7"
 ]
 requires-python = ">=3.7"
+
+[tool.flit.metadata.urls]
+Development = "https://github.com/brettcannon/modutil"
