Tweak home page link

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "flit.buildapi"
 module = "modutil"
 author = "Brett Cannon"
 author-email = "brett@python.org"
-home-page = "https://modutil.readthedocs.io"
+home-page = "https://modutil.readthedocs.io/"
 description-file = "README.md"
 dev-requires = ["sphinx", "sphinx_rtd_theme", "pytest"]
 classifiers = [
