--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: python
 python:
   - "3.7-dev"
   - "nightly"
+install:
+  pip install --upgrade flit
+  flit install
 script:
-  - pytest tests
+  - python3 -X dev -m pytest tests
+  - cd docs && make make check suspicious html SPHINXOPTS="-q -W -j4"
 
 notifications:
   on_success: never
