--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ python:
   - "3.7-dev"
   - "nightly"
 install:
-  pip install --upgrade flit
-  flit install
+  - pip install --upgrade flit
+  - flit install
 script:
   - python3 -X dev -m pytest tests
   - cd docs && make make check suspicious html SPHINXOPTS="-q -W -j4"
